--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "framer-motion": "^11.3.30",
     "fuse.js": "^7.0.0",
     "react": "^18.3.1",
