--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.3.30",
     "fuse.js": "^7.0.0",
+    "lucide-react": "^0.438.0",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
