--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,39 @@
-# Node.js
+# Node.js dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# macOS
-.DS_Store
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# IDEs and text editors
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Build directories
-build/
-dist/
+jspm_packages/
 
 # Logs
-logs
-*.log
 logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Dependency directories
-node_modules/
-jspm_packages/
+# OS generated files
+.DS_Store          # macOS
+Thumbs.db          # Windows
+ehthumbs.db        # Windows
+Desktop.ini        # Windows
+
+# IDEs and text editors
+.vscode/
+.idea/
+*.code-workspace
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+*.iml
+
+# Build and distribution directories
+build/
+dist/
+.out/
+.vite/
+.vitest/
+.svelte-kit/
+.next/
 
 # Temporary files
 tmp/
@@ -46,116 +43,37 @@ temp/
 coverage/
 *.cache
 *.eslintcache
-*.babelrc.js
 *.history
-
-# Parcel-bundler cache (if used)
-.cache/
-
-# Next.js
-.next/
-
-# Vite
-.vite/
-.vitest/
-
-# SvelteKit
-.svelte-kit/
-
-# Storybook
-.out/
-.storybook/
-node_modules/@storybook/
+tsconfig.tsbuildinfo
 
 # Static output
 out/
 public/
 
-# Testing
-coverage/
-*.lcov
-
 # Environment variables
 .env
-.env.*.local
 
-# Bower
-bower_components/
-
-# TypeScript
-*.tsbuildinfo
-tsconfig.tsbuildinfo
-
-# Styled Components artifacts
-*.css.map
-*.scss.map
-
-# ESLint
-.eslintcache
-
-# npm package lock file
+# Package manager lock files
 package-lock.json
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Yarn Files
+yarn.lock
 .pnp.*
+.yarn-integrity
+pnpm-lock.yaml
 
-# JetBrains IDE files
-.idea/
-*.iml
-
-# Sass cache
-.sass-cache/
-
-# Jest
+# Testing artifacts
+*.lcov
 jest-test-results.json
 
-# Project files
-.vscode/
-*.code-workspace
-
-# TypeScript cache
-tsconfig.tsbuildinfo
-
-# Serverless directories
-.serverless/
-
-# Terraform directories
-.terraform/
-
-# Hugo directories
-public/
-resources/_gen/
-
-# Python bytecode files
-*.pyc
-__pycache__/
-
-# dotenv environment variable files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Parcel cache
+# Parcel, Storybook, and other frameworks
 .cache/
 .parcel-cache/
+.storybook/
+node_modules/@storybook/
 
-# .vscode folder for Visual Studio Code
-.vscode/
-
-# Serverless framework files
-.serverless/
-
-# Prettier
+# Miscellaneous
+bower_components/
+.sass-cache/
 .prettierignore
-
-# Any .env files
-.env*
-
-# Any lock files
-yarn.lock
-pnpm-lock.yaml
+.serverless/
+.terraform/
+.resources/_gen/
