--- a/package.json
+++ b/package.json
@@ -11,17 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
     "framer-motion": "^11.5.2",
-    "fuse.js": "^7.0.0",
-    "lucide-react": "^0.438.0",
     "react": "^18.3.1",
-    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.13.0",
-    "react-router-dom": "^6.26.1",
-    "swiper": "^11.1.10"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
