--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
-    "framer-motion": "^11.5.4",
+    "framer-motion": "^11.5.5",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.26.2",
