--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.5.5",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-hot-toast": "^2.4.1",
