--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "canvas-confetti": "^1.9.3",
     "framer-motion": "^11.5.5",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.439.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
@@ -23,7 +24,8 @@
     "react-intersection-observer": "^9.13.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^6.26.2",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
