--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "react-basics",
+  "name": "heritagelink",
+  "description": "AI Powered Ticket Booking Platform",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "clean": "rm -rf node_modules package-lock.json && npm cache clean --force"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -39,5 +41,15 @@
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "vite": "^5.2.0"
-  }
+  },
+  "keywords": [
+    "AI",
+    "ticket-booking",
+    "platform",
+    "react",
+    "vite",
+    "modern-ui"
+  ],
+  "author": "Ayush Yadav",
+  "license": "MIT"
 }
