--- a/package.json
+++ b/package.json
@@ -6,40 +6,52 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext js,jsx,ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx,ts,tsx --fix",
+    "type-check": "tsc --noEmit",
     "preview": "vite preview",
     "clean": "rm -rf node_modules package-lock.json && npm cache clean --force"
   },
   "dependencies": {
-    "axios": "^1.9.0",
+    "@tailwindcss/postcss": "^4.1.10",
+    "axios": "^1.10.0",
     "canvas-confetti": "^1.9.3",
-    "framer-motion": "^12.12.1",
+    "framer-motion": "^12.19.1",
     "html2canvas": "^1.4.1",
-    "lucide-react": "^0.511.0",
+    "lucide-react": "^0.522.0",
     "react": "^19.1.0",
-    "react-datepicker": "^8.3.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-qr-code": "^2.0.15",
-    "react-router-dom": "^7.6.0",
+    "react-qr-code": "^2.0.16",
+    "react-router-dom": "^7.6.2",
     "react-simple-typewriter": "^5.0.1",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
-    "@types/react": "^19.1.4",
-    "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@eslint/js": "^9.29.0",
+    "@types/canvas-confetti": "^1.9.0",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-datepicker": "^7.0.0",
+    "@types/react-dom": "^19.1.6",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.35.0",
+    "@typescript-eslint/parser": "^8.35.0",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9.27.0",
+    "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17",
+    "globals": "^16.2.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.11",
+    "typescript": "^5.8.3",
     "vite": "^6.3.5"
   },
   "keywords": [
